unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/Sales_Channel_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Sales Channel Mapping</label>
    <pluralLabel>Sales Channel Mappings</pluralLabel>
</CustomObject>