unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/AmountsFormat__c.field-meta.xml
<CustomField>
    <fullName>AmountsFormat__c</fullName>
    <label>Amounts Format</label>
    <length>25</length>
    <type>Text</type>
</CustomField>