unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/bcc_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>bcc_Invoice_Email__c</fullName>
    <label>bcc Invoice Email</label>
    <type>Email</type>
</CustomField>