unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidDepositReference__c.field-meta.xml
<CustomField>
    <fullName>cegidDepositReference__c</fullName>
    <label>Cegid Deposit Reference</label>
    <length>8</length>
    <type>Text</type>
</CustomField>