unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidPayment_MethodId__c.field-meta.xml
<CustomField>
    <fullName>cegidPayment_MethodId__c</fullName>
    <description>Order Payments/Create_Payment/MethodIdPayments</description>
    <label>Cegid Payment_Method ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>