unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidPaymentMethodID__c.field-meta.xml
<CustomField>
    <fullName>cegidPaymentMethodID__c</fullName>
    <description>OmniChannel/PaymentMethodId et Deposit  Payments/MethodId</description>
    <label>Cegid Payment Method ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>