unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidSalesPersonId__c.field-meta.xml
<CustomField>
    <fullName>cegidSalesPersonId__c</fullName>
    <label>CEGID salesperson ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>