unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidStateUsed__c.field-meta.xml
<CustomField>
    <fullName>cegidStateUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cegid State Used</label>
    <type>Checkbox</type>
</CustomField>