unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidStoreCode__c.field-meta.xml
<CustomField>
    <fullName>cegidStoreCode__c</fullName>
    <label>CEGID Store Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>