unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidTaxExcluded__c.field-meta.xml
<CustomField>
    <fullName>cegidTaxExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEGID Tax Excluded</label>
    <type>Checkbox</type>
</CustomField>