unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/cegidTaxSystem__c.field-meta.xml
<CustomField>
    <fullName>cegidTaxSystem__c</fullName>
    <label>CEGID Tax System</label>
    <length>4</length>
    <type>Text</type>
</CustomField>