unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/ChannelId__c.field-meta.xml
<CustomField>
    <fullName>ChannelId__c</fullName>
    <label>ChannelId</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>