unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/createOrderSummary__c.field-meta.xml
<CustomField>
    <fullName>createOrderSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Order Summary</label>
    <type>Checkbox</type>
</CustomField>