unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/CreateRefundClickAndCollect__c.field-meta.xml
<CustomField>
    <fullName>CreateRefundClickAndCollect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateRefundClickAndCollect</label>
    <type>Checkbox</type>
</CustomField>