unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/IsCorssBorder__c.field-meta.xml
<CustomField>
    <fullName>IsCorssBorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCorssBorder</label>
    <type>Checkbox</type>
</CustomField>