unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/IsManaged__c.field-meta.xml
<CustomField>
    <fullName>IsManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Managed</label>
    <type>Checkbox</type>
</CustomField>