unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>