unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/SendEcomOrdersToCegid__c.field-meta.xml
<CustomField>
    <fullName>SendEcomOrdersToCegid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEcomOrdersToCegid</label>
    <type>Checkbox</type>
</CustomField>