unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/TaxRateIsNull__c.field-meta.xml
<CustomField>
    <fullName>TaxRateIsNull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TaxRateIsNull</label>
    <type>Checkbox</type>
</CustomField>