unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <inlineHelpText>Please enter the timezone from the following list : https://help.salesforce.com/s/articleView?id=sf.admin_supported_timezone.htm&amp;type=5</inlineHelpText>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>