unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/TimeZones__c.field-meta.xml
<CustomField>
    <fullName>TimeZones__c</fullName>
    <label>TimeZones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Mexico_City</fullName>
                <default>true</default>
                <label>America/Mexico_City</label>
            </value>
            <value>
                <fullName>America/Montreal</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Sao_Paulo</fullName>
            </value>
            <value>
                <fullName>Asia/Dubai</fullName>
            </value>
            <value>
                <fullName>Asia/Nicosia</fullName>
            </value>
            <value>
                <fullName>Asia/Seoul</fullName>
            </value>
            <value>
                <fullName>Asia/Singapore</fullName>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
            </value>
            <value>
                <fullName>Australia/Sydney</fullName>
            </value>
            <value>
                <fullName>Europe/Amsterdam</fullName>
            </value>
            <value>
                <fullName>Europe/Athens</fullName>
            </value>
            <value>
                <fullName>Europe/Berlin</fullName>
            </value>
            <value>
                <fullName>Europe/Bratislava</fullName>
            </value>
            <value>
                <fullName>Europe/Brussels</fullName>
            </value>
            <value>
                <fullName>Europe/Bucharest</fullName>
            </value>
            <value>
                <fullName>Europe/Budapest</fullName>
            </value>
            <value>
                <fullName>Europe/Copenhagen</fullName>
            </value>
            <value>
                <fullName>Europe/Dublin</fullName>
            </value>
            <value>
                <fullName>Europe/Helsinki</fullName>
            </value>
            <value>
                <fullName>Europe/Lisbon</fullName>
            </value>
            <value>
                <fullName>Europe/Ljubljana</fullName>
            </value>
            <value>
                <fullName>Europe/London</fullName>
            </value>
            <value>
                <fullName>Europe/Luxembourg</fullName>
            </value>
            <value>
                <fullName>Europe/Madrid</fullName>
            </value>
            <value>
                <fullName>Europe/Malta</fullName>
            </value>
            <value>
                <fullName>Europe/Monaco</fullName>
            </value>
            <value>
                <fullName>Europe/Oslo</fullName>
            </value>
            <value>
                <fullName>Europe/Paris</fullName>
            </value>
            <value>
                <fullName>Europe/Prague</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>