unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/VAT_ID__c.field-meta.xml
<CustomField>
    <fullName>VAT_ID__c</fullName>
    <label>VAT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>