unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>