unpackaged/main/default/objects/Sales_Channel_Mapping__mdt/listViews/Sales_Channel_Mappings.listView-meta.xml
<ListView>
    <fullName>Sales_Channel_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ChannelId__c</columns>
    <columns>Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Sales Channel Mappings</label>
</ListView>